tests/NormalTests/paczka1/small_fuzzy/63654987.err
Error in line 11: glotbTDU7 S812 26,3
Error in line 5: AfV99L2H A691 161,2
Error in line 12: glotbTDU7 A691 40,3
